--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -366,11 +366,12 @@
                         android:layout_weight="1"
                         android:orientation="horizontal">
                         <Button
-                            android:id="@+id/button"
+                            android:id="@+id/buttons"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:onClick="getRates"
                             android:text="REQUEST"
+                            android:clickable="true"
                             app:layout_constraintTop_toBottomOf="@+id/chfText"
                             tools:layout_editor_absoluteX="0dp"
                             android:background="@drawable/buttonshape"/>
