--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -424,6 +424,37 @@
 
                 </LinearLayout>
 
+                <!-- 세 번째 페이지. content2 -->
+                <LinearLayout
+                    android:id="@+id/tab3"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:background="@color/colorWhite">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:background="#474945"
+                        android:layout_weight="8.5">
+
+                    </LinearLayout>
+
+                    <WebView
+                        android:id="@+id/webView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+
+
+
+
+
+
+                </LinearLayout>
+
             </FrameLayout>
         </LinearLayout>
     </TabHost>
