--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FFB1CD</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorBlue">#B1CAFF</color>
 </resources>
