commit_abc_results

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -491,7 +491,7 @@
                                 android:id="@android:id/tabs"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@color/colorBlue"
+                                android:background="#587FD1"
                                 android:textColor="@color/colorBlack" />
 
                             <FrameLayout
