--- a/sample/src/main/res/layout/activity_splash.xml
+++ b/sample/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D6E6FF"
+    android:background="#FFFFFF"
     tools:context=".SplashActivity">
 
     <ImageView
